--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -41,7 +41,7 @@
                 My passion for programming is not just a skill set but a driving force that motivates me to stay at the forefront 
                 of technological advancements, ensuring that I remain a valuable asset to any team or projects I undertake.
             </p>
-            <button  style="color: aqua;">Read More...</button>
+            <button>Read More...</button>
         </div>
         <div class="aboutImg"><img src="../Portfolio/Images/My Pic 2.jpg" alt=""></div>
     </div>
@@ -82,18 +82,25 @@
         <div class="proj1">
             <img class="projImg" src="../Portfolio/Images/Expresss Couriers.png" alt="">
             <h1 class="projHead">Expresss Couriers Website</h1>
-            <button><a href=""><i class="fa-solid fa-code-branch fa-2xl" style="color: #ffffff;"></i>Repo Link</a></button>
+            <button><a href="https://github.com/Shreeyog-Gaikwad/CODESOFT.git" target="_blank"><i class="fa-solid fa-code-branch fa-2xl" style="color: #ffffff;"></i>Repo Link</a></button>
         </div>
         <div class="proj2">
             <img class="projImg" src="../Portfolio/Images/Khayali Pulaav.png" alt="">
             <h1 class="projHead">Hotel Management Website</h1>
-            <button><a href="https://github.com/Shreeyog-Gaikwad/Hotel-Management-.git"><i class="fa-solid fa-code-branch fa-2xl" style="color: #ffffff;"></i>Repo Link</a></button>
+            <button><a href="https://github.com/Shreeyog-Gaikwad/Hotel-Management-.git" target="_blank"><i class="fa-solid fa-code-branch fa-2xl" style="color: #ffffff;"></i>Repo Link</a></button>
         </div>
         <div class="proj3">
             <img class="projImg" src="../Portfolio/Images/Portfolio.png" alt="">
             <h1 class="projHead">Portfolio Website</h1>
-            <button><a href=""><i class="fa-solid fa-code-branch fa-2xl" style="color: #ffffff;"></i>Repo Link</a></button>
+            <button><a href="https://github.com/Shreeyog-Gaikwad/CODESOFT.git" target="_blank"><i class="fa-solid fa-code-branch fa-2xl" style="color: #ffffff;"></i>Repo Link</a></button>
         </div>
+    </div>
+    
+    <br>
+
+    <h1 class="resumeHead">Click here to Viwe My Resume...</h1>
+    <div class="resume">
+        <a href="../Portfolio/Images/Shreeyog Gaikwad - Resume.pdf" target="_blank"><button>Resume <i class="fa-solid fa-download fa-1x" style="color: #000;"></i></button></a>
     </div>
 
     <br>
