--- a/Landing_Page.html
+++ b/Landing_Page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <img class="logo" src="../Landing Page/Images/LogoPNG.png" alt="">
+        <img class="logo" src="../Codsoft_Task1/Images/LogoPNG.png" alt="">
         <label class="logo">Expressss Couriers</label>
         <ul>
         <li><a class="navOpt active" href="#Home">Home</a></li>
@@ -26,7 +26,7 @@
             <br>
             <button inputmode="submit" class="signIn"><i class="fa-solid fa-arrow-right-to-bracket isignIn"></i>Sign In</button>
         </p>
-        <img class="homeImg" src="../Landing Page/Images/Background.png" alt="">
+        <img class="homeImg" src="../Codsoft_Task1/Images/Background.png" alt="">
     </section>
 
     <section class="about" id="About">
@@ -47,7 +47,7 @@
                 </p>
                 </div>
             </div>
-            <img class="aboutimg" src="../Landing Page/Images/AboutusPNG.png" alt="">
+            <img class="aboutimg" src="../Codsoft_Task1/Images/AboutusPNG.png" alt="">
         </div>
     </section>
 
@@ -58,15 +58,15 @@
 
         <div class="serviceImg">
             <div class="service1">
-                <img src="../Landing Page/Images/ServicesPNG1.png" alt="">
+                <img src="../Codsoft_Task1/Images/ServicesPNG1.png" alt="">
                 <p>Free Pickup from Home</p>
             </div>
             <div class="service2">
-                <img src="../Landing Page/Images/ServicesPNG2.png" alt="">
+                <img src="../Codsoft_Task1/Images/ServicesPNG2.png" alt="">
                 <p>International Orders Accepted</p>
             </div>
             <div class="service3">
-                <img src="../Landing Page/Images/ServicesPNG3.svg" alt="">
+                <img src="../Codsoft_Task1/Images/ServicesPNG3.svg" alt="">
                 <p>Domestic Dilevery within 24hrs</p>
             </div>
         </div>
@@ -77,19 +77,19 @@
         <div id="carouselExampleAutoplaying galleryImg" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../Landing Page/Images/Gallery1.jpg" class="d-block w-100" alt="...">
+                <img src="../Codsoft_Task1/Images/Gallery1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../Landing Page/Images/Gallery2.avif" class="d-block w-100" alt="...">
+                <img src="../Codsoft_Task1/Images/Gallery2.avif" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../Landing Page/Images/Gallery3.webp" class="d-block w-100" alt="...">
+                <img src="../Codsoft_Task1/Images/Gallery3.webp" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../Landing Page/Images/Gallery4.jpg" class="d-block w-100" alt="...">
+                <img src="../Codsoft_Task1/Images/Gallery4.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../Landing Page/Images/Gallery5.jpg" class="d-block w-100" alt="...">
+                <img src="../Codsoft_Task1/Images/Gallery5.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
           </div>
